@@ -1,3 +1,15 @@
+2010-07-14  Lucas De Marchi  <lucas.demarchi@profusion.mobi>
+
+        Reviewed by Antonio Gomes.
+
+        Generate MathML files with CMake even if MathML is disabled. This
+        fixes EFL build after r63274.
+        https://bugs.webkit.org/show_bug.cgi?id=42263
+
+        No new functionality, so no new tests.
+
+        * CMakeLists.txt:
+
 2010-07-14  Martin Robinson  <mrobinson@igalia.com>
 
         Reviewed by Xan Lopez.
